<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />-->
    </group>

    <item android:title="Farmàcies">
        <menu>
            <item
                android:id="@+id/nav_poblacions"
                android:icon="@drawable/ic_city"
                android:title="@string/menu_poblacions" />
            <item
                android:id="@+id/nav_farmacia_guardia"
                android:icon="@drawable/ic_pharmacy"
                android:title="@string/menu_farmacies_guardia" />
        </menu>
    </item>

    <item android:title="Gestió taules BD">
        <menu>
            <item
                android:id="@+id/nav_taula_poblacions"
                android:icon="@drawable/ic_database"
                android:title="@string/menu_gestio_poblacions" />
            <item
                android:id="@+id/nav_taula_farmacies"
                android:icon="@drawable/ic_database"
                android:title="@string/menu_gestio_farmacies" />
        </menu>
    </item>
</menu>
