<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoFarmacia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <!-- Very important: Background NOT transparent -->

    <!--<TextView
        android:id="@+id/ofertaFarmacia"
        android:layout_width="237dp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:hint="@string/oferta_farmacia"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/adresa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />-->

    <TextView
        android:id="@+id/telefon"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:clickable="true"
        android:gravity="center"
        android:hint="@string/telefon"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresa" />

    <TextView
        android:id="@+id/adresa"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/adresa"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/telefon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomFarmacia" />

    <TextView
        android:id="@+id/nomFarmacia"
        android:layout_width="336dp"
        android:layout_height="39dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/nom_farmacia"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fotoFarmacia"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefon"
        app:srcCompat="@drawable/farmacies3" />

</androidx.constraintlayout.widget.ConstraintLayout>